--- a/views/newPost.ejs
+++ b/views/newPost.ejs
@@ -109,7 +109,7 @@
                 비밀번호를 입력해 주세요
             </label>
             <p></p>
-            <input type="text" id="new_pw" style="height: 20px; width: 50%;">
+            <input type="password" id="new_pw" style="height: 20px; width: 50%;">
         </div>
         <p></p>
         <div id="contentsInput">
