IMPLEMENT 상세페이지 기능 구현 완료

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -40,7 +40,7 @@
             let postingDate = dateY + "-" + dateM + "-" + dateD
              
             let htmlTemp = `<p></p>
-                            <a id="title">
+                            <a id="title" onclick="window.location.href='/post/detail?postTime=${post["postTime"]}'">
                                 title : ${post["title"]}
                             </a>
                             <p></p>
