--- a/views/main.ejs
+++ b/views/main.ejs
@@ -92,5 +92,8 @@
             ---------------------------------------------------
           </a>
       </div>
+      <button onclick="window.location.href='/post'">
+          글 쓰 기
+      </button>
   </body>
 </html>
