MODIFY 코드리뷰 완료  0928

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -211,7 +211,10 @@
         <button onclick="delete_post()">
             삭 제 하 기
         </button>
-    </div>
+        <p></p>
+        <button onclick="window.location.href='/'">
+            처 음 으 로
+        </button>
 
 </body>
 </html>
