MODIFY 홈버튼 추가

--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -106,13 +106,14 @@
          </label>
          <p></p>
          <textarea id="contents" style="height: 100px; width: 344px; font-size: larger;" readonly></textarea>
-         <p></p>
-         <a>
-           ---------------------------------------------------
-         </a>
     </div>
+    <p></p>
     <button onclick="go_edit()">
         수 정 하 기
+    </button>
+    <p></p>
+    <button onclick="window.location.href='/main'">
+        처 음 으 로
     </button>
   </body>
 </html>
