--- a/views/newPost.ejs
+++ b/views/newPost.ejs
@@ -88,45 +88,49 @@
       </a>
       <p></p>
       <div id="newPost">
-        <div id="titleInput">
-            <label for="new_title">
-               제목을 입력해 주세요
-            </label>
-            <p></p>
-            <input type="text" id="new_title" style="height: 20px; width: 50%;" required>
-        </div>
-        <p></p>
-        <div id="writerInput">
-            <label for="new_writer">
-                작성자를 입력해 주세요
-            </label>
-            <p></p>
-            <input type="text" id="new_writer" style="height: 20px; width: 50%;" required>
-        </div>
-        <p></p>
-        <div id="pwInput">
-            <label for="new_pw">
-                비밀번호를 입력해 주세요
-            </label>
-            <p></p>
-            <input type="password" id="new_pw" style="height: 20px; width: 50%;" required>
-        </div>
-        <p></p>
-        <div id="contentsInput">
-            <label for="new_contents">
-                내용을 입력해 주세요
-            </label>
-            <p></p>
-            <textarea id="new_contents" style="height: 100px; width: 50%;" required></textarea>
-        </div>        
+          <div id="titleInput">
+             <label for="new_title">
+                제목을 입력해 주세요
+             </label>
+             <p></p>
+             <input type="text" id="new_title" style="height: 20px; width: 50%;" required>
+          </div>
+         <p></p>
+         <div id="writerInput">
+              <label for="new_writer">
+                 작성자를 입력해 주세요
+             </label>
+             <p></p>
+             <input type="text" id="new_writer" style="height: 20px; width: 50%;" required>
+          </div>
+          <p></p>
+         <div id="pwInput">
+               <label for="new_pw">
+                    비밀번호를 입력해 주세요
+                </label>
+               <p></p>
+               <input type="password" id="new_pw" style="height: 20px; width: 50%;" required>
+         </div>
+         <p></p>
+         <div id="contentsInput">
+             <label for="new_contents">
+                 내용을 입력해 주세요
+             </label>
+             <p></p>
+             <textarea id="new_contents" style="height: 100px; width: 50%;" required></textarea>
+          </div>        
       </div>
       <p></p>
-        <button onclick="new_post()">
-            글 쓰 기
-        </button>
-        <p></p>
-        <a>
-            ---------------------------------------------------
-        </a>
+      <a>
+          ---------------------------------------------------
+      </a>
+      <p></p>
+      <button onclick="new_post()">
+            입 력 완 료
+      </button>
+      <p></p>
+      <button onclick="window.location.href='/main'">
+            처 음 으 로
+      </button>
   </body>
 </html>
