--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -145,7 +145,7 @@
                 },success: function(response){
                     if (response["result"] == "success"){
                         alert("삭제가 완료되었습니다.")
-                        window.location.herf="/main"
+                        window.location.href="/main"
                     } else if (response["result"] == "fail") {
                         alert("비밀 번호가 일치하지 않습니다. 다시 돌아갑니다.")
                         window.location.href='/post/detail?postTime=' + postTime;
@@ -212,7 +212,7 @@
             삭 제 하 기
         </button>
         <p></p>
-        <button onclick="window.location.href='/'">
+        <button onclick="window.location.href='/main'">
             처 음 으 로
         </button>
 </body>
